Updating code style

--- a/ietf/templates/codematch/index.html
+++ b/ietf/templates/codematch/index.html
@@ -31,7 +31,7 @@
 		   <div>
 			<i class="fa fa-microphone" style="font-size: 30px; float: left; padding-top:5px"></i>
 			<p style="padding-left: 44px">
-			<a href="#"> CodeRequests</a><br />
+			<a href="{% url "ietf.codematch.requests.views.showlist" %}"> CodeRequests</a><br />
 			Which coding opportunities are offered by the IETF?</p>
 		  </div>
 		  
