--- a/ietf/templates/codematch/matches/list.html
+++ b/ietf/templates/codematch/matches/list.html
@@ -7,7 +7,7 @@
 {% block bodyAttrs %}data-spy="scroll" data-target="#affix"{% endblock %}
 
 {% block content %}
-<!-- Main content starts -->
+<!-- Main content starts -->  
 
 <div class="content" style="padding:0">
     
@@ -53,7 +53,13 @@
                         <!-- Widget title -->
                         <div class="widget-head">
                             <div class="pull-left">
-                                <i class="fa fa-sort"></i> <span style="font-weight: lighter">Order by: </span> Title/Project | <a href="#">Coder</a> | <a href="#">Coding Request</a> | <a href="#">Protocol</a> | <a href="#">Area</a> | <a href="#">Working Group</a>
+                                <i class="fa fa-sort"></i> <span style="font-weight: lighter">Order by: </span> 
+                                <a href="#">Title/Project</a> | 
+                                <a href="#">Coder</a> | 
+                                <a href="#">Coding Request</a> | 
+                                <a href="#">Protocol</a> | 
+                                <a href="#">Area</a> | 
+                                <a href="#">Working Group</a>
                             </div>
                             <div class="widget-icons pull-right">
                                 <a href="#" class="wminimize"><i class="fa fa-chevron-up"></i></a>
@@ -70,9 +76,17 @@
                                     	<li>
                                         	<!-- Title and date -->
                                         	<h6><a href="{% url 'show' projectcontainer.id coding.id %}">{{ coding.title }}</a> <span>by</span> <a href="#">{{ coding.coder }}</a></h6>
+                                        	<!--<h6><a href="{% url 'show' projectcontainer.id coding.id %}">{{ coding.title }}</a> <span>by</span> <a href="#">{{ coding.coder.name }}</a></h6>-->
                                         	<p>{{ projectcontainer.description }}</p>
                                         	<p>
-                                        	CodeRequest: <a href="#">{{ projectcontainer.code_request }}</a> | Protocol: <a href="#">{{ projectcontainer.protocol }}</a> | Area: <a href="#">?</a> | Working Group: <a href="#">?</a>
+                                        	{% if projectcontainer.code_request == None %}
+                                        	CodeRequest: 	 <a href="#">None</a>
+                                        	{% else %}
+                                        	CodeRequest: 	 <a href="{% url 'ietf.codematch.requests.views.show' projectcontainer.id %}">{{ projectcontainer.code_request.id }}</a>
+                                        	{% endif %} 
+                                        	| Protocol:  	 <a href="#">{{ projectcontainer.protocol }}</a> 
+                                        	| Area:    	 	 <a href="#">?</a> 
+                                        	| Working Group: <a href="#">?</a>
                                         	</p>
                                     	</li>
                                     	{% endfor %}
