--- a/ietf/templates/codematch/requests/new.html
+++ b/ietf/templates/codematch/requests/new.html
@@ -3,7 +3,7 @@
 {% load ietf_filters bootstrap3 widget_tweaks %}
 {% load future %}
 
-{% block title %} Create a new CodeMatch Project{% endblock %}
+{% block title %} Create a new CodeRequest {% endblock %}
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
@@ -17,20 +17,19 @@
     
     <!-- Main bar -->
     <div class="mainbar">
-        
-        <!-- Page heading -->
-        <div class="page-head">
-            <h2 class="pull-left"><i class="icon ion-arrow-shrink" style="font-size: 20px;"></i> CodeMatches</h2>
-            
-            <!-- Breadcrumb -->
-            <div class="bread-crumb pull-right">
-                <a href="{% url "ietf.codematch.views.index" %}"><i class="fa fa-home"></i> Home</a>
-                <!-- Divider -->
-                <span class="divider">/</span>
-                <a href="{% url "ietf.codematch.matches.views.showlist" %}" class="bread-current">CodeMatches</a>
-                <span class="divider">/</span>
-                <a href="#" class="bread-current">New</a>
-            </div>
+                    
+	    <!-- Page heading -->
+	    <div class="page-head">
+		      <h2 class="pull-left"><i class="fa fa-microphone"></i> CodeRequests</h2>
+	        <!-- Breadcrumb -->
+	        <div class="bread-crumb pull-right">
+	          <a href="{% url "ietf.codematch.views.index" %}"><i class="fa fa-home"></i> Home</a> 
+	          <!-- Divider -->
+	          <span class="divider">/</span> 
+	          <a href="{% url "ietf.codematch.requests.views.showlist" %}" class="bread-current">Code Requests</a>
+	          <span class="divider">/</span>
+	          <a href="#" class="bread-current">New</a>
+	        </div>
             
             <div class="clearfix"></div>
             
@@ -58,7 +57,8 @@
                         </div>
                         <div class="widget-content referrer">
                             <!-- Widget content -->
-                            <form class="form-horizontal" action="/codematch/requests/new/" method="POST">
+                            <form class="form-horizontal" action="/codematch/requests/new/" method="post">
+                           	{% csrf_token %}
                             <div class="padd">
                             	<div class="form-group">
 									<label class="control-label col-xs-2">Mentor:</label>
@@ -81,13 +81,12 @@
 								<div class="form-group">
 									<label class="control-label col-xs-2">Description:</label>
 									<div class="col-xs-4">
-										{{ projform.description}}
+										{{ projform.description }}
 									</div>
 								</div>
 								
 						   		<div class="widget-foot">
                                 <p class="buttonlist">
-                                	{% csrf_token %}
                                 	<div class="col-xs-offset-1">
 								    	<input type="submit" class="btn btn-primary" value="Submit" />
                                 		<a class="btn btn-default " href="{% url "ietf.codematch.requests.views.showlist" %}">Back</a>
