--- a/ietf/templates/codematch/requests/search.html
+++ b/ietf/templates/codematch/requests/search.html
@@ -8,24 +8,23 @@
 	<!-- Main bar -->
 	<div class="mainbar">
 
-		<!-- Page heading -->
-		<div class="page-head">
-			<h2 class="pull-left"><i class="icon ion-arrow-shrink" style="font-size: 20px;"></i> CodeMatches</h2>
-
-			<!-- Breadcrumb -->
-			<div class="bread-crumb pull-right">
-				<a href="{% url "ietf.codematch.views.index" %}"><i class="fa fa-home"></i> Home</a>
-				<!-- Divider -->
-				<span class="divider">/</span>
-				<a href="{% url "ietf.codematch.matches.views.showlist" %}" class="bread-current">CodeMatches</a>
-				<span class="divider">/</span>
-				<a href="#" class="bread-current">Search</a>
-			</div>
-
-			<div class="clearfix"></div>
-
-		</div>
-		<!-- Page heading ends -->
+	    <!-- Page heading -->
+	    <div class="page-head">
+		      <h2 class="pull-left"><i class="fa fa-microphone"></i> CodeRequests</h2>
+	        <!-- Breadcrumb -->
+	        <div class="bread-crumb pull-right">
+	          <a href="{% url "ietf.codematch.views.index" %}"><i class="fa fa-home"></i> Home</a> 
+	          <!-- Divider -->
+	          <span class="divider">/</span> 
+	          <a href="{% url "ietf.codematch.requests.views.showlist" %}" class="bread-current">Code Requests</a>
+	          <span class="divider">/</span>
+	          <a href="#" class="bread-current">Search</a>
+	        </div>
+            
+            <div class="clearfix"></div>
+            
+        </div>
+        <!-- Page heading ends -->
 
 		<!-- Matter -->
 
@@ -49,16 +48,16 @@
 						<div class="widget-content referrer">
 							<!-- Widget content -->
 								<div class="padd">
-									{% include "codematch/matches/search_form.html" %}
+									{% include "codematch/requests/search_form.html" %}
 
 									{% if meta.searching %}
-									{% include "codematch/matches/search_result.html" %}
+									{% include "codematch/requests/search_result.html" %}
 									{% endif %}
 								</div>
 								<div class="widget-foot">
 									<p class="buttonlist">
 										
-											<a class="btn btn-default " href="{% url "ietf.codematch.matches.views.showlist" %}">Back</a>
+										<a class="btn btn-default " href="{% url "ietf.codematch.requests.views.showlist" %}">Back</a>
 										
 									</p>
 								</div>
