Login and logout

--- a/ietf/templates/base/menu_codematch.html
+++ b/ietf/templates/base/menu_codematch.html
@@ -56,22 +56,41 @@
 	  </ul>
 
     </div>
+    
+    	{% if user.is_authenticated %}
+    
         <!-- Links -->
         <ul class="nav navbar-nav pull-right">
           <li class="dropdown pull-right">            
             <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-              <i class="fa fa-user"></i> Admin <b class="caret"></b>              
+              <i class="fa fa-user"></i> {{ user }} <b class="caret"></b>              
             </a>
             
             <!-- Dropdown menu -->
             <ul class="dropdown-menu">
               <li><a href="#"><i class="fa fa-user"></i> Profile</a></li>
               <li><a href="#"><i class="fa fa-cogs"></i> Settings</a></li>
-              <li><a href="#"><i class="fa fa-sign-out"></i> Logout</a></li>
+              <li><a rel="nofollow" href="/codematch/accounts/logout/" >Logout</a></li>
             </ul>
           </li>
           
         </ul>
+        {% else %}
+        <!-- Links -->
+        <ul class="nav navbar-nav pull-right">
+          <li class="dropdown pull-right">            
+            <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+              <i class="fa fa-user"></i> Enter <b class="caret"></b>              
+            </a>
+            
+            <!-- Dropdown menu -->
+            <ul class="dropdown-menu">
+              <li><a rel="nofollow" href="/codematch/accounts/login{% if "/codematch/accounts/logout/" not in request.get_full_path %}/?next={{request.get_full_path|urlencode}}{% endif %}">Sign in</a></li>
+            </ul>
+          </li>
+          
+        </ul>
+        {% endif %}
         
         <!-- Search form -->
         <form class="navbar-form navbar-right" role="search">
