--- a/ietf/templates/codematch/requests/show.html
+++ b/ietf/templates/codematch/requests/show.html
@@ -113,7 +113,7 @@
 		                    <br />  
 		                    
 		                    <h4><strong>Resources</strong></h4>
-		                    Mentor: <a href="#">{{ projectcontainer.code_request.mentor }}</a><br />
+		                    Mentor: <a href="#">{{ projectcontainer.code_request.mentor.name }}</a><br />
 		                    <!--Mentor: <a href="#">{{ projectcontainer.code_request.mentor.name }}</a><br />-->
 		            		Mailing list: <a href="#">?</a> - <a href="#">?</a><br />
 		            		Twitter: <a href="#">?</a><br />
