--- a/ietf/templates/codematch/matches/show.html
+++ b/ietf/templates/codematch/matches/show.html
@@ -65,10 +65,10 @@
 
 											<div class="row">
 												<div class="col-md-4">
-													<strong>By:</strong><a href="#">{{ coding.coder }}</a>
+													<strong>By:</strong><a href="#">{{ coding.coder.name }}</a>
 													<!--<strong>By:</strong><a href="#">{{ coding.coder.name }}</a>-->
 													<br />
-													<strong>Mentor:</strong><a href="#">{{ projectcontainer.code_request.mentor }}</a>
+													<strong>Mentor:</strong><a href="#">{{ projectcontainer.code_request.mentor.name }}</a>
 													<!--<strong>Mentor:</strong><a href="#">{{ projectcontainer.code_request.mentor.name }}</a>-->
 													<br />
 													<strong>CodeRequest:</strong> {{ projectcontainer.code_request.id }}
